# tair-vector-rs

./: Cargo.toml  README.md
src/: bulk.rs  lib.rs  macros.rs
